103 ==> 244224 - Ignore case when importing tags from metadata.
104 ==> 359963 - In the Albums treeview, clicking an album which has a sub-album does not show its thumbnails.
105 ==> 359967 - Edit slider values as text.
106 ==> 359966 - Clicking and holding a spinbox arrow doesn't keep increasing the value.
107 ==> 359969 - BQM claims it finished processing instantly.
108 ==> 360040 - Information in metadata and geolocation sidebar is inconsistent.
109 ==> 357753 - Picture preview in geotagging window is possibily rotated.
110 ==> 353530 - Captions no longer saved to XMP : ACDSee namespace not supported by Exiv2 0.24.
111 ==> 355256 - Failed to load image if file path contains non-ascii characters.
112 ==> 331261 - Import not using Date/Time Original or create date EXIF data.
113 ==> 359516 - Trash not sortable by deletion time.
114 ==> 360329 - Digikam 5 beta 4 build breaks.
115 ==> 360434 - Geolocation Editor messed up size and contents.
116 ==> 360437 - Crash during the face detection.
117 ==> 360460 - No date for pics during import but for movies.
118 ==> 360470 - Import - unchecking "build sub-directories from prefix" lead to klauncher-error "no call kio_digikamdates".
119 ==> 360474 - Initial setup: Splash shows "Loading tools..." but it is scanning images.
120 ==> 360566 - Crash or hang when adding a tag.
121 ==> 360436 - Crash after running gps correlation.
122 ==> 361052 - When importing picture file dates are all from importing time. Not creation date.
123 ==> 359108 - 5 beta 3: interface problem, icons not showing up.
124 ==> 361275 - Compile time error: undefined reference while linking renamecustomizertest.
125 ==> 361440 - Panorama Tool can`t find a pto2mk.
126 ==> 361339 - Creates nameless subalbums and corrupts album hierarchy.
127 ==> 361611 - Plugin 'Advanced Slide Show' - "Print Caption" does not work.
128 ==> 361686 - When returning from full screen to preview mode the same image should be selected/shown.
129 ==> 