@@ -7,6 +7,7 @@
 add_subdirectory(icons)
 add_subdirectory(pics)
 add_subdirectory(about)
+add_subdirectory(colorschemes)
 add_subdirectory(database)
 add_subdirectory(facesengine)
 add_subdirectory(geolocation)
