@@ -1,0 +1,96 @@
+[ColorEffects:Disabled]
+Color=56,56,56
+ColorAmount=0.5
+ColorEffect=2
+ContrastAmount=0.5
+ContrastEffect=1
+IntensityAmount=0.05
+IntensityEffect=0
+
+[ColorEffects:Inactive]
+Color=0,0,0
+ColorAmount=0.5
+ColorEffect=1
+ContrastAmount=0.25
+ContrastEffect=2
+IntensityAmount=0
+IntensityEffect=0
+
+[Colors:Button]
+BackgroundAlternate=12,12,12
+BackgroundNormal=0,0,0
+DecorationFocus=192,192,192
+DecorationHover=255,255,255
+ForegroundActive=192,255,255
+ForegroundInactive=160,160,160
+ForegroundLink=128,181,255
+ForegroundNegative=255,128,172
+ForegroundNeutral=255,212,128
+ForegroundNormal=255,255,255
+ForegroundPositive=128,255,128
+ForegroundVisited=192,128,255
+
+[Colors:Selection]
+BackgroundAlternate=0,52,116
+BackgroundNormal=0,49,110
+DecorationFocus=192,192,192
+DecorationHover=255,255,255
+ForegroundActive=192,255,255
+ForegroundInactive=96,148,207
+ForegroundLink=128,181,255
+ForegroundNegative=255,128,172
+ForegroundNeutral=255,212,128
+ForegroundNormal=255,255,255
+ForegroundPositive=128,255,128
+ForegroundVisited=192,128,255
+
+[Colors:Tooltip]
+BackgroundAlternate=12,12,12
+BackgroundNormal=0,0,0
+DecorationFocus=192,192,192
+DecorationHover=255,255,255
+ForegroundActive=192,255,255
+ForegroundInactive=160,160,160
+ForegroundLink=128,181,255
+ForegroundNegative=255,128,172
+ForegroundNeutral=255,212,128
+ForegroundNormal=255,255,255
+ForegroundPositive=128,255,128
+ForegroundVisited=192,128,255
+
+[Colors:View]
+BackgroundAlternate=12,12,12
+BackgroundNormal=0,0,0
+DecorationFocus=192,192,192
+DecorationHover=255,255,255
+ForegroundActive=192,255,255
+ForegroundInactive=160,160,160
+ForegroundLink=128,181,255
+ForegroundNegative=255,128,172
+ForegroundNeutral=255,212,128
+ForegroundNormal=255,255,255
+ForegroundPositive=128,255,128
+ForegroundVisited=192,128,255
+
+[Colors:Window]
+BackgroundAlternate=20,20,20
+BackgroundNormal=16,16,16
+DecorationFocus=192,192,192
+DecorationHover=255,255,255
+ForegroundActive=192,255,255
+ForegroundInactive=160,160,160
+ForegroundLink=128,181,255
+ForegroundNegative=255,128,172
+ForegroundNeutral=255,212,128
+ForegroundNormal=255,255,255
+ForegroundPositive=128,255,128
+ForegroundVisited=192,128,255
+
+[General]
+Name=digiKam High Dark
+
+[WM]
+activeBackground=0,49,110
+activeForeground=255,255,255
+inactiveBackground=64,64,64
+inactiveForeground=128,128,128
