@@ -1,0 +1,94 @@
+[ColorEffects:Disabled]
+ColorAmount=0
+ColorEffect=0
+ContrastAmount=0.65
+ContrastEffect=1
+IntensityAmount=0.25
+IntensityEffect=2
+
+[ColorEffects:Inactive]
+ColorAmount=0
+ColorEffect=0
+ContrastAmount=0.25
+ContrastEffect=2
+IntensityAmount=0.05
+IntensityEffect=2
+
+[Colors:Button]
+BackgroundAlternate=90,98,109
+BackgroundNormal=82,88,99
+DecorationFocus=125,141,153
+DecorationHover=119,149,179
+ForegroundActive=255,255,255
+ForegroundInactive=135,143,154
+ForegroundLink=156,212,255
+ForegroundNegative=225,150,209
+ForegroundNeutral=218,198,115
+ForegroundNormal=210,222,240
+ForegroundPositive=145,221,100
+ForegroundVisited=64,128,255
+
+[Colors:Selection]
+BackgroundAlternate=111,126,144
+BackgroundNormal=120,136,156
+DecorationFocus=125,141,153
+DecorationHover=119,149,179
+ForegroundActive=255,255,255
+ForegroundInactive=174,192,218
+ForegroundLink=156,212,255
+ForegroundNegative=225,150,209
+ForegroundNeutral=218,198,115
+ForegroundNormal=209,225,244
+ForegroundPositive=145,221,100
+ForegroundVisited=64,128,255
+
+[Colors:Tooltip]
+BackgroundAlternate=171,181,195
+BackgroundNormal=182,193,208
+DecorationFocus=125,141,153
+DecorationHover=119,149,179
+ForegroundActive=255,255,255
+ForegroundInactive=112,118,128
+ForegroundLink=87,161,218
+ForegroundNegative=99,66,92
+ForegroundNeutral=86,78,45
+ForegroundNormal=42,44,48
+ForegroundPositive=57,86,38
+ForegroundVisited=46,95,185
+
+[Colors:View]
+BackgroundAlternate=67,71,80
+BackgroundNormal=60,64,72
+DecorationFocus=125,141,153
+DecorationHover=119,149,179
+ForegroundActive=255,255,255
+ForegroundInactive=135,143,154
+ForegroundLink=156,212,255
+ForegroundNegative=225,150,209
+ForegroundNeutral=218,198,115
+ForegroundNormal=210,222,240
+ForegroundPositive=145,221,100
+ForegroundVisited=64,128,255
+
+[Colors:Window]
+BackgroundAlternate=78,83,94
+BackgroundNormal=73,78,88
+DecorationFocus=125,141,153
+DecorationHover=119,149,179
+ForegroundActive=255,255,255
+ForegroundInactive=135,143,154
+ForegroundLink=156,212,255
+ForegroundNegative=225,150,209
+ForegroundNeutral=218,198,115
+ForegroundNormal=182,193,208
+ForegroundPositive=145,221,100
+ForegroundVisited=64,128,255
+
+[General]
+Name=digiKam Low Dark
+
+[WM]
+activeBackground=138,151,166
+activeForeground=224,237,255
+inactiveBackground=82,89,99
+inactiveForeground=140,152,168
