@@ -164,4 +164,6 @@ BUGFIXES FROM KDE BUGZILLA (https://www.digikam.org/changelog):
 126 ==> 361339 - Creates nameless subalbums and corrupts album hierarchy.
 127 ==> 361611 - Plugin 'Advanced Slide Show' - "Print Caption" does not work.
 128 ==> 361686 - When returning from full screen to preview mode the same image should be selected/shown.
-129 ==> 
+129 ==> 360922 - Unable to change or manage themes in digikam (and showfoto).
+130 ==>
+
